# cpp-rinha-backend-2026

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  benchmark.md  docker-compose.yml  info.json
.github/workflows/: publish.yaml
bench/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: rinha.json
monitoring/grafana/provisioning/dashboards/: provider.yml
src/: apm.hpp  ball_tree.hpp  bench.cpp  converter.cpp  debug_query.cpp  flat_json.hpp  ivf.hpp  jsmn.h  knn.hpp  lb.cpp  metrics_server.hpp  normalizer.hpp  server.cpp  types.hpp
test/: results.json  test.js
